--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
 	"dependencies": {
 		"dotenv": "^8.2.0",
 		"express": "^4.16.4",
-		"cors": "^2.8.5"
+		"cors": "^2.8.5",
+		"mongodb": "^5.1.0",
+		"mongoose": "^7.0.3"
 	},
 	"repository": {
 		"url": "https://github.com/freeCodeCamp/boilerplate-project-exercisetracker"
